<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>project-signer-root</artifactId>
    <version>3.0.7</version>
    <packaging>pom</packaging>
    <properties>
        <markdowner.version>${parent.version}</markdowner.version>
        <project-signer-api.version>${parent.version}</project-signer-api.version>
        <commons-io.version>2.11.0</commons-io.version>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven-compiler-plugin.source>${java.version}</maven-compiler-plugin.source>
        <maven-compiler-plugin.target>${java.version}</maven-compiler-plugin.target>
        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
        <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
        <jaxb-api.version>2.3.1</jaxb-api.version>
        <spring-boot-maven-plugin.version>2.7.2</spring-boot-maven-plugin.version>
        <junit-jupiter-api.version>5.9.0</junit-jupiter-api.version>
    </properties>
    <parent>
        <groupId>org.jesperancinha.parser</groupId>
        <artifactId>markdowner</artifactId>
        <version>3.0.7</version>
    </parent>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jesperancinha.parser</groupId>
                <artifactId>markdowner-core</artifactId>
                <version>${markdowner.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jesperancinha.parser</groupId>
                <artifactId>markdowner-filter</artifactId>
                <version>${markdowner.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jesperancinha.parser</groupId>
                <artifactId>project-signer-api</artifactId>
                <version>${project-signer-api.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter-api.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jesperancinha.plugins</groupId>
                    <artifactId>omni-coveragereporter-maven-plugin</artifactId>
                    <version>${omni-coveragereporter-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <sourcepath>target/generated-sources/delombok</sourcepath>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>project-signer</module>
    </modules>
</project>